<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/bg"
    android:fitsSystemWindows="true"
    >    
    
     <include android:id="@+id/titlebar" 
       layout="@layout/main_titlebar" 
     />
     
     <!-- 红包储备-->
     <RelativeLayout 
         android:layout_width="fill_parent" 
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
      >
    
          <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
             android:layout_marginLeft="10dp"
             android:textSize="14sp"
             android:text="@string/hongbao_balance"
          />
           
           
          <TextView
              android:id="@+id/hongbao_rollout_tv_balance"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_centerInParent="true"
              android:layout_marginLeft="10dp"
              android:textSize="40sp"
              android:textColor="@color/red"
              android:text="@string/zero_float"
          />
           
      </RelativeLayout>
    
      
      <!-- 转出金额 -->
      <RelativeLayout 
           android:id="@+id/hongbao_rollout_rl_money" 
           android:layout_width="fill_parent" 
           android:layout_height="50dp"
           android:layout_marginTop="20dp"
           android:background="@color/white" 
        >

          <TextView 
              android:id="@+id/hongbao_rollout_tv_money_tip"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignParentLeft="true"
              android:layout_centerVertical="true"
              android:layout_marginLeft="10dp"
              android:layout_marginRight="20dp"
              android:text="@string/money2"
              android:textSize="16sp"
              
           />
          
   
          <EditText 
              android:id="@+id/hongbao_rollout_et_money"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:layout_toRightOf="@id/hongbao_rollout_tv_money_tip"
              android:layout_centerVertical="true"
              android:background="@null"
              android:hint="@string/tip_input_hongbao_rollout_money"
              android:textSize="18sp"
              android:inputType="text"
              android:textColorHint="@color/hint_text_color"
              android:maxLength="7" 
          />
          
                
       </RelativeLayout>
       
       <Button 
         android:id="@+id/hongbao_rollout_btn_next"
         android:layout_width="fill_parent"
         android:layout_height="50dp"
         android:layout_marginTop="20dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:background="@drawable/selector_btn_blue"
         android:text="@string/next"
         android:textColor="@color/white"

       />
       
      <TextView 
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:layout_marginLeft="10dp"
         android:text="@string/tip_hongbao_rollout"
      />
    

</LinearLayout>
