<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/white"
    android:fitsSystemWindows="true"
  >
      <include
	   android:id="@+id/titlebar"
	   layout="@layout/main_titlebar"
	 />
    
    
      <RelativeLayout 
          android:id="@+id/withdraw_rl_money"
          android:layout_width="fill_parent"
          android:layout_height="60dp"
          android:background="@color/gray_f8"
      >

          <TextView
              android:id="@+id/recharge_tv_money_tip"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignParentLeft="true"
              android:layout_centerVertical="true"
              android:layout_marginLeft="30dp"
              android:layout_marginRight="20dp"
              android:textColor="@color/gray_4d"
              android:text="@string/money2"
              android:textSize="16sp"

              />


          <EditText
              android:id="@+id/recharge_et_money"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:layout_toRightOf="@id/recharge_tv_money_tip"
              android:layout_centerVertical="true"
              android:background="@null"
              android:hint="@string/tip_input_recharge_money"
              android:textSize="14sp"
              android:inputType="text"
              android:textColorHint="@color/gray_99"
              android:maxLength="7"
              />
      </RelativeLayout>


    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20dp"
        android:textColor="@color/gray_4d"
        android:textSize="16sp"
        android:text="@string/tip_text"
        />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:lineSpacingMultiplier="1.4"
        android:textColor="@color/gray_99"
        android:textSize="14sp"
        android:text="@string/tip_recharge"
        />

    <Button
        android:id="@+id/recharge_btn_next"
        android:layout_width="fill_parent"
        android:layout_height="55dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:background="@drawable/selector_btn_red"
        android:text="@string/confirm"
        android:textColor="@color/white"

        />
    

</LinearLayout>
